--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,62 @@
 {
-  "extends": ["next", "next/core-web-vitals"]
+  "extends": [
+    "plugin:@typescript-eslint/recommended",
+    "plugin:import/errors",
+
+    "plugin:import/warnings",
+    "plugin:import/typescript",
+
+    "plugin:react/recommended",
+    "plugin:jsx-a11y/recommended",
+    "prettier"
+    // "prettier/react"
+  ],
+  "rules": {
+    "@typescript-eslint/explicit-function-return-type": 1,
+    "@typescript-eslint/no-empty-function": 1,
+    "@typescript-eslint/no-var-requires": 1,
+    "@typescript-eslint/no-inferrable-types": 1,
+    "react/prop-types": 0,
+    "no-console": 1,
+    "react-hooks/rules-of-hooks": 2,
+    "react-hooks/exhaustive-deps": 1
+    // "react/react-in-jsx-scope": 0
+  },
+  "plugins": [
+    "@typescript-eslint",
+    "react",
+    "import",
+    "jsx-a11y",
+    "react-hooks"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 2019,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "env": {
+    "es6": true,
+    "browser": true,
+    "node": true
+  },
+  "ignorePatterns": ["node_modules/", ".next/"],
+  "settings": {
+    "react": {
+      "version": "detect"
+    },
+    "import/resolver": {
+      "alias": {
+        "map": [
+          ["@/components", "./components"],
+          ["@/lib", "./lib"],
+          ["@/styles", "./styles"],
+          ["@/util", "./util"]
+        ],
+        "extensions": [".ts", ".js", ".jsx", ".tsx", ".json"]
+      }
+    }
+  }
 }
