--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@reach/tabs": "^0.15.0",
+    "@xstate/inspect": "^0.4.1",
+    "@xstate/react": "^1.3.4",
+    "@xstate/test": "^0.4.2",
     "next": "11.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-query": "^3.17.2",
+    "xstate": "^4.20.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.11",
